# demo-trace-replay

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  config.yaml  config.yaml.example  pyproject.toml
datasets/: example_traces.jsonl
src/trace_replay/: cli.py  config.py  locustfile.py  models.py  session.py  state.py
src/trace_replay/api/: anthropic.py  base.py  openai.py
src/trace_replay/dataset/: base.py  huggingface.py  jsonl.py  registry.py
